--- a/public/css/projectstyle.css
+++ b/public/css/projectstyle.css
@@ -21,8 +21,12 @@ body{
 		display: none;
 	} */
 
-	.main, .mainprnt, .mainprnt-1, .mainsearch-1, .divsearch-1, .goacampus{
+	.main, .mainprnt, .mainprnt-1, .mainsearch-1, .divsearch-1, .goacampus, .mainbibtex{
 		display: flex;
+	}
+
+	.mainbibtex{
+		margin-left: 10px;
 	}
 
 	.main{
@@ -980,7 +984,7 @@ body{
 
 	  /**************** Model Pop-Up for 419 - Page Expired error ****************/
 	  /* The Modal (background) */
-	 #myModal, #myModal2 {
+	 #myModal, #myModal2, #myModal_view {
 		position: fixed;
 		top: 50%;
 		left: 50%;
@@ -1119,4 +1123,125 @@ body{
 		transition: 0.5s;
 		outline: none;
 	}
+
+	/**********************************************************************************/
+		/** bibtex **/
+	/**********************************************************************************/
+	#one
+	{
+	margin-top:50px;
+	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+	}
+	.it .btn-orange
+	{
+		background-color: transparent;
+		border-color: #777!important;
+		color: #777;
+		text-align: left;
+	width:100%;
+	}
+	.it input.form-control
+	{
+		height: 54px;
+		border:none;
+	margin-bottom:0px;
+		border-radius: 0px;
+		border-bottom: 1px solid #ddd;
+		box-shadow: none;
+	}
+	.it .form-control:focus
+	{
+		border-color: #ff4d0d;
+		box-shadow: none;
+		outline: none;
+	}
+	.fileUpload {
+		position: relative;
+		overflow: hidden;
+		margin: 10px;
+	}
+	.fileUpload input.upload {
+		position: absolute;
+		top: 0;
+		right: 0;
+		margin: 0;
+		padding: 0;
+		font-size: 20px;
+		cursor: pointer;
+		opacity: 0;
+		filter: alpha(opacity=0);
+	}
+	.it .btn-new, .it .btn-next
+	{
+		margin: 30px 0px;
+		border-radius: 0px;
+		background-color: #333;
+		color: #f5f5f5;
+		font-size: 16px;
+		width: 155px;
+	}
+	.it .btn-next
+	{
+		background-color: #ff4d0d;
+		color: #fff;
+	}
+	.it .btn-check
+	{
+	cursor:pointer;
+	line-height:54px;
+	color:red;
+	}
+	.it .uploadDoc
+	{
+		margin-bottom: 20px;
+	}
+	.it .uploadDoc
+	{
+		margin-bottom: 20px;
+	}
+	.it .btn-orange img {
+		width: 30px;
+	}
+	p
+	{
+	font-size:16px;
+	text-align:center;
+	margin:30px 0px;
+	}
+	.it #uploader .docErr
+	{
+		position: absolute;
+		right:auto;
+		left: 10px;
+		top: -56px;
+		padding: 10px;
+		font-size: 15px;
+		background-color: #fff;
+		color: red;
+		box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.2);
+		display: none;
+	}
+	.it #uploader .docErr:after
+	{
+		content: '\f0d7';
+		display: inline-block;
+		font-family: FontAwesome;
+		font-size: 50px;
+		color: #fff;
+		position: absolute;
+		left: 30px;
+		bottom: -40px;
+		text-shadow: 0px 3px 6px rgba(0,0,0,0.2);
+	}
+
+	/**********************************************************************************/
+		/** progress bar **/
+	/**********************************************************************************/
+	.hiddensuccess {
+        visibility: hidden;
+        opacity: 0;
+        transition-duration  :(200ms, 0);
+        transition-property : (opacity, visibility);
+        transition-delay: (0, 200ms);
+    }
 } 
